[package]
name = "wasmer-middleware-common"
version = "0.17.0"
repository = "https://github.com/wasmerio/wasmer"
description = "Wasmer runtime common middlewares"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
keywords = ["wasm", "webassembly", "middleware", "metering"]
categories = ["wasm"]
edition = "2018"

[dependencies]
wasmer-runtime-core = { path = "../runtime-core", package = "wasmer-runtime-core-fl", version = "0.17.0" }
